fixed z-index errors with paypal buttons over navbar and slider over modal

--- a/src/components/UI/Slider/Slider.css
+++ b/src/components/UI/Slider/Slider.css
@@ -14,7 +14,6 @@
     position: relative;
     min-width: 100%;
     height: 100%;
-    z-index: 3;
     transition: .5s;
     overflow: hidden;
 }
@@ -27,7 +26,6 @@
     width: 10%;
     height: 100%;
     background: none;
-    z-index: 5;  
     border: none;
     outline: none;
     color: #fff;
@@ -43,7 +41,6 @@
     width: 10%;
     height: 100%; 
     background: none;
-    z-index: 5;
     border: none;
     outline: none;
     color: #fff;
